--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-scripts": "3.4.4",
+    "react-table": "^7.6.3",
+    "styled-components": "^5.2.3",
     "typescript": "^4.1.3"
   },
   "scripts": {
@@ -38,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-table": "^7.0.29",
+    "@types/styled-components": "^5.1.9"
   }
 }
