--- a/package.json
+++ b/package.json
@@ -3,24 +3,22 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.11.8",
-    "@testing-library/react": "9.5.0",
-    "@testing-library/user-event": "9.0.0",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^12.19.12",
-    "@types/react": "16.14.2",
-    "@types/react-dom": "16.9.10",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
+    "cross-fetch": "^3.1.4",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-scripts": "^4.0.3",
     "react-table": "^7.6.3",
     "styled-components": "^5.2.3",
+    "twin.macro": "^2.3.3",
     "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "PORT=8000 craco start",
     "build": "craco build",
-    "test": "craco test",
+    "test": "node_modules/@craco/craco/bin/craco.js test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,10 +42,31 @@
   "devDependencies": {
     "@craco/craco": "^6.1.1",
     "@tailwindcss/postcss7-compat": "^2.1.0",
+    "@testing-library/jest-dom": "5.11.8",
+    "@testing-library/react": "9.5.0",
+    "@testing-library/user-event": "9.0.0",
+    "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^12.19.12",
+    "@types/react": "16.14.2",
+    "@types/react-dom": "16.9.10",
     "@types/react-table": "^7.0.29",
     "@types/styled-components": "^5.1.9",
     "autoprefixer": "^9.8.6",
+    "classnames": "^2.3.1",
+    "nock": "^13.0.11",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components",
+      "css": {
+        "from": "styled-components",
+        "import": "css"
+      },
+      "config": "tailwind.config.js",
+      "autoCssProp": true
+    }
   }
 }
