--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "PORT=8000 craco start",
     "build": "craco build",
-    "test": "npm test -u",
+    "test": "npm test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
