--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "start": "PORT=8000 craco start",
     "build": "craco build",
-    "test": "npm test",
+    "test": "react-scripts test --coverage --watchAll=false -u",
+    "test:watch": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
